2008-09-26  Callum McKenzie  <callum@spooky-possum.org>

	* invest/Makefile.am (invest_PYTHON): Don't ship defs.py. Bug
	553611.

==================== 2.24.0.1 ====================

2008-09-06  Callum McKenzie  <callum@spooky-possum.org>

	* invest/quotes.py (QuoteUpdater.on_retriever_completed): Remove
	a stray character. Bug 550981.

2008-08-27  Callum McKenzie  <callum@spooky-possum.org>

	* invest/quotes.py: Add a translator hint about the meaning of
	some strings. See bug #548697.

2008-08-21  Callum McKenzie  <callum@spooky-possum.org>

	* invest/quotes.py (QuoteUpdater.populate): Avoid a potential
	division by zero. See bug 548517.

2008-08-16  Callum McKenzie  <callum@spooky-possum.org>

	* invest/about.py:
	* invest/chart.py:
	* invest/defs.py.in:
	* invest/__init__.py:
	* invest/quotes.py:
	* invest/widgets.py:
	* invest/applet.c :
	* invest/about.py: Patch from Matteo Zandi to remove the gnome-vfs
	dependency and replace it with python's urllib.urlopen. Also adds
	proxy support and adds tooltip notification of issues with
	downloading. Additionally, removes the defunct url from the about
	dialog. 

2008-07-22  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Added Swedish translation.
	* docs/Makefile.am: Added sv to DOC_LINGUAS.

2008-06-25  Ilkka Tuohela <<hile@iki.fi>>

	* docs/fi/fi.po: Added Finnish documentation by Jukka Heikkilä.
	* docs/Makefile.am: Added fi to DOC_LINGUAS

2008-06-16  Callum McKenzie  <callum@spooky-possum.org>

	* invest/widgets.py: 
	* invest/applet.py:
	* invest/quotes.py:
	* invest/preferences.py:
	* invest/invest-applet.py:
	* invest/__init__.py: Add a DEBUGGING symbol so the -d switch is
	useful. Make sure it is used.

	Explicitly ignore some errors on cleanup when we can't retrieve
	the data. These occur when we try and close a file handle that is
	probably already closed.
	
	Add a dialog to explain that no data is available if the computer
	is offline or the servers are down.
